# libintrin

./: .gitignore  CMakeLists.txt  Config.cmake.in  Makefile.in  NEWS  configure  configure.ac
include/: Makefile.in  libintrin_config_internal.h.cmake.in  libintrin_config_internal.h.in
lib/: CMakeLists.txt  Makefile.in
